# edpm-ansible

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  Containerfile  Makefile  OWNERS  OWNERS_ALIASES  README.md  README.rst  ansible-requirements.txt  bindep.txt  execution-environment.yml  galaxy.yml  meta  molecule-requirements.txt  playbooks  plugins  renovate.json  requirements.txt  requirements.yml  role-addition.yml  roles  setup.cfg  test-requirements.txt  tox.ini
docs/: Gemfile  build-docs.sh  doc8.ini  docs-requirements.txt  requirements.txt
edpm_ansible/: dependencies.txt  requirements.yml
group_vars/: .keep
meta/: runtime.yml
openstack_ansibleee/: Containerfile  Dockerfile  edpm_entrypoint.sh  edpm_run_and_summarize.sh  requirements.txt  requirements.yaml  settings  setup.sh  write_runner_summary.py
playbooks/: README.md  accel_drivers.yml  bootstrap.yml  ceph_client.yaml  ceph_client.yml  ceph_hci_pre.yaml  ceph_hci_pre.yml  cleanup.yml  cli-cleanup-ipa.yml  configure_frr.yaml  configure_frr.yml  configure_network.yaml  configure_network.yml  configure_os.yaml  configure_os.yml  configure_ovn_bgp_agent.yaml  configure_ovn_bgp_agent.yml  configure_ovs_dpdk.yml  connection.yml  cyborg.yml  deploy-edpm-network-configure.yml  deploy-edpm-openstack-configure.yml  deploy-edpm-openstack-install.yml  deploy-edpm-openstack-run.yml  deploy_edpm_network_configure.yml  deploy_edpm_network_validate.yml  deploy_edpm_openstack_configure.yml  deploy_edpm_openstack_install.yml  deploy_edpm_openstack_run.yml  deploy_edpm_os_configure.yml  deploy_edpm_os_install.yml  deploy_edpm_os_run.yml  deploy_edpm_pre_network.yml  deploy_edpm_telemetry_ceilometer.yaml  fips_status.yml  (+61 more)
(+1930 files in other folders)
