[metadata]
name = edpm-ansible
summary = Ansible assets for the EDPM project.
description_file =
    README.rst

author = Red Hat EDPM Team
author_email = ''
home_page = https://github.com/openstack-k8s-operators/edpm-ansible
classifier =
    License :: OSI Approved :: Apache Software License
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/edpm-inventory/ = edpm_ansible/inventory/*
    share/ansible/edpm-playbooks/ = edpm_ansible/playbooks/*
    share/ansible/plugins/ = edpm_ansible/ansible_plugins/*
    share/ansible/roles/ = edpm_ansible/roles/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
